<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Post title"
        android:id="@+id/text_title"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Post body"
        android:id="@+id/text_body" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add post"
        android:id="@+id/button_add" />
</LinearLayout>
